// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewTabLink handles children 1`] = `
<DocumentFragment>
  <a
    class="ms-Link insights-link root-109"
    href="test"
    target="_blank"
  >
    link text
  </a>
</DocumentFragment>
`;

exports[`NewTabLink renders content with custom className 1`] = `
<DocumentFragment>
  <a
    class="ms-Link insights-link custom-class root-109"
    href="test"
    target="_blank"
  />
</DocumentFragment>
`;

exports[`NewTabLink renders content without custom className 1`] = `
<DocumentFragment>
  <a
    class="ms-Link insights-link root-109"
    href="test"
    target="_blank"
  />
</DocumentFragment>
`;
